# sidekick

./: CMakeLists.txt  Mckinley Sidekick WriteUp.docx  attack.h  drone.cpp  drone.h  main  main.cpp  map.cpp  map.h  readme.md  scout.h  sidekick PP.pptx
Version_1/: CMakeLists.txt  attack.h  drone.h  map.cpp  map.h  scout.h
version_2/: CMakeLists.txt  drone.cpp  drone.h  fighter.cpp  fighter.h  main  main.cpp  map.cpp  map.h  readme.md  scout.cpp  scout.h  user_menu.cpp  user_menu.h
